# customer-intelligence-agent

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  agents-cli-manifest.yaml  build.py  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: pain-point-analyst.md  report-writer.md  taxonomy-architect.md
.claude/rules/: common.md  python.md
.claude/skills/generate-report/: SKILL.md
.claude/skills/surface-pain-points/: SKILL.md
.claude/skills/tag-transcripts/: SKILL.md
.claude/skills/update-gbrain/: SKILL.md
agent/: README.md  agent.py  fast_api_app.py  report.py  tools.py
analytics/: README.md  build_brain.py  drivers.py  egregiousness.py  metrics.py  severity.py  subthemes.py  systemic.py
datagen/: README.md  dimensions.py  driver_model.py  generate.py
docs/: AGENT.md  ANALYTICS.md  DATA_MODEL.md  DECISIONS.md  EVALUATION.md  EXAMPLE_END_TO_END.md  GBRAIN.md  INPUT_CONTRACT.md  REPORT_SPEC.md  TAGGING.md  TAXONOMY.md
gbrain/: README.md  graph.py  retrieval.py  schema_pack.py  store.py
shared/: README.md  config.py  contract.py  schemas.py  text.py
tagging/: README.md  ingest.py  run.py  tag.py  taxonomy.py
tests/: test_contract.py  test_deepdive.py  test_driver_recovery.py  test_drivers.py  test_egregiousness.py  test_gbrain.py  test_harness.py  test_integration.py  test_metrics.py  test_severity.py
