[project]
name = "customer-intelligence-agent"
version = "0.1.0"
description = "Surface egregious customer pain points (L1-L5) from support transcripts with a persistent graph brain."
authors = [{ name = "Sumanth Nathella" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    # Agent (read plane)
    "google-adk>=1.15.0,<2.0.0",
    "litellm>=1.65.0",
    # Bulk LLM tagging + embeddings (build plane, local Ollama)
    "ollama>=0.3.0",
    # Data + stats
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "scikit-learn>=1.4.0",
    "statsmodels>=0.14.0",
    "hdbscan>=0.8.33",
    # Config / validation
    "pydantic>=2.7.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.6",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["agent", "tagging", "datagen", "analytics", "gbrain", "shared"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "tagging", "datagen", "analytics", "gbrain", "shared"]

[tool.pytest.ini_options]
pythonpath = "."
asyncio_default_fixture_loop_scope = "function"
